[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://Comandos.tscn" type="PackedScene" id=2]
[ext_resource path="res://TechnaSans-Regular.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="MenuPausa" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 423.394
margin_top = 250.211
margin_right = -405.606
margin_bottom = -201.789
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -437.0
margin_top = -260.0
margin_right = 953.0
margin_bottom = 522.0
color = Color( 0.368627, 0.0156863, 0.552941, 0.435294 )

[node name="Button" type="Button" parent="ColorRect"]
modulate = Color( 0.945098, 1, 0, 1 )
margin_left = 622.0
margin_top = 314.0
margin_right = 763.0
margin_bottom = 346.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "CONTINUAR"

[node name="Button2" type="Button" parent="ColorRect"]
modulate = Color( 0.945098, 1, 0, 1 )
margin_left = 621.606
margin_top = 377.789
margin_right = 762.606
margin_bottom = 409.789
text = "COMO JOGAR"

[node name="Button3" type="Button" parent="ColorRect"]
modulate = Color( 0.945098, 1, 0, 1 )
margin_left = 622.0
margin_top = 441.789
margin_right = 763.0
margin_bottom = 473.789
text = "SAIR DE JOGO"

[node name="Comandos" parent="." instance=ExtResource( 2 )]
visible = false

[node name="ComandosVoltar" type="Button" parent="Comandos"]
modulate = Color( 0.521569, 0.0431373, 0.772549, 1 )
margin_left = 112.0
margin_top = 356.0
margin_right = 240.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "VOLTAR"
[connection signal="pressed" from="ColorRect/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="ColorRect/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Comandos/ComandosVoltar" to="." method="_on_ComandosVoltar_pressed"]
